--- a/consultVan.html
+++ b/consultVan.html
@@ -90,11 +90,20 @@
         Let’s make your vanlife dreams a reality! Book your 1:1 consultation to start your vanlife journey or refine your current setup. I look forward to helping you hit the road with confidence.
       </span></p>
       <button onclick="myFunction()" class="hide-desktop" id="readMoreBtn">Read more</button>
-      <button type="button" class="booking-button"><a href="/contact.html">Book your 1:1 call</a></button>
+      <!-- <button type="button" class="booking-button"><a href="/contact.html">Book your 1:1 call</a></button> -->
       </div>
       <div class="history-right">
         <img src="/img/Consultations/vanbuild.jpg" alt="">
       </div>
+    </div>
+    <div class="scheduling">
+      <!-- Calendly link widget begin -->
+      <button type="button" class="booking-button">
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anjalijustice-info'});return false;">Book a Consult Today!</a>
+      </button>
+       <!-- Calendly link widget end -->
     </div>
     <div class="rates-container">
       <h1>Rates and Services</h1>
