--- a/consultations.html
+++ b/consultations.html
@@ -25,6 +25,11 @@
             <br>
             <h1>Work With Me</h1>
             <p class="section-sub-header">Personalized guidance for your lifestyle</p>
+            <!-- Calendly badge widget begin -->
+      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+      <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/anjalijustice-info?primary_color=989f97', text: 'Schedule a Consult Today!', color: '#989f97', textColor: '#ffffff', branding: true }); }</script>
+      <!-- Calendly badge widget end -->
         </div>
         <div class="consult-container">
             <p>Whether you're dreaming of hitting the road in a van or need help designing and building your website, I offer personalized 1:1 consultations to help you get there faster, with fewer headaches. Choose your focus below to get started.</p>
