add beddys affiliate and move partnerships to top of link page

--- a/linkPages/homeGoodsLinks.html
+++ b/linkPages/homeGoodsLinks.html
@@ -27,6 +27,10 @@
     <h1>Home Goods</h1>
     <div class="vanlife-links">
         <div class="link-card electrical-link">
+          <p>Beddy's Zipper Bedding</p>
+          <a href="https://lddy.no/1kwvn"><img src="https://beddys.com/cdn/shop/files/ZipBase_Beddy_s_v3_ws_1800x1800.jpg?v=1729282513" alt=""></a>
+        </div>
+        <div class="link-card electrical-link">
           <p>ICECO Fridge/Freezer 60L</p>
           <a href="https://amzn.to/493UXXm"><img src="https://m.media-amazon.com/images/I/61FqJNIiN2L._AC_SX679_.jpg" alt=""></a>
         </div>
@@ -48,11 +52,11 @@
       </div>
       <div class="link-card">
         <p>AeroPress Go Plus</p>
-        <a href="https://aeropress.com/products/aeropress-go-plus"><img src="https://aeropress.com/cdn/shop/files/Go_Plus_hero_shot_Black_1_1_700x.png?v=1719948940" alt=""></a>
+        <a href="https://aeropress.com/ANJALIJUSTICE"><img src="https://aeropress.com/cdn/shop/files/Go_Plus_hero_shot_Black_1_1_700x.png?v=1719948940" alt=""></a>
       </div>
       <div class="link-card electrical-link">
         <p>Pots & Pans with removable Handle</p>
-        <a href="https://amzn.to/4fJf2EW"><img src="https://m.media-amazon.com/images/I/61tphnvIdAL._AC_SX679_.jpg" alt=""></a>
+        <a href="https://amzn.to/3CZFhsv"><img src="https://m.media-amazon.com/images/I/719KO6TkdmL._AC_SX679_.jpg" alt=""></a>
       </div>
       <div class="link-card electrical-link">
         <p>Waffle Towels - Bath Sheet Size</p>
